--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+// gradle依赖统一管理
+apply from: "config.gradle"
+
 buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
+        mavenCentral()//如果 jcenter 很慢，尝试添加 mavenCentral 并调整到首行
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        //Gradle Android Maven plugin
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        //Gradle Bintray Plugin
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        //lambda
+        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +32,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        flatDir{
+            dirs 'libs'
+        }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
