--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,9 @@ dependencies {
 
 //    compile name: 'art', ext: 'aar'
     //art
-    compile project(':art')
+    implementation project(':art')
+
+    annotationProcessor(rootProject.ext.dependencies["butterknife-compiler"]) {
+        exclude module: 'support-annotations'
+    }
 }
