--- a/config.gradle
+++ b/config.gradle
@@ -14,7 +14,7 @@ ext {
             retrofitSdkVersion               : "2.3.0",
             dagger2SdkVersion                : "2.11",
             glideSdkVersion                  : "4.0.0",
-            butterknifeSdkVersion            : "9.0.0-rc2",
+            butterknifeSdkVersion            : "8.8.1",
             rxlifecycleSdkVersion            : "1.0",
             rxlifecycle2SdkVersion           : "2.1.0",
             espressoSdkVersion               : "2.2.2",
